[package]

name = "rust-neuronetworks-examples"
version = "0.0.1"
authors = ["Artem Konenko <yadummer@gmail.com>"]

[dependencies.neuralnetwork]
# git = "https://github.com/jaredkerim/rust-nn.git"
git = "https://github.com/dummer/rust-nn.git"

[dependencies.image]
git = "https://github.com/PistonDevelopers/image"

[dependencies]
num = "*"
